test/errors/array_literal_type_mismatch.sl
# expect: COMPERROR
fixed[] a = [1, "bad"];
